Added Constants.h and moved all constants there.

--- a/Nonogram/Nonogram.vcxproj
+++ b/Nonogram/Nonogram.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Functionality.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
