--- a/Nonogram/Nonogram.vcxproj.filters
+++ b/Nonogram/Nonogram.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Functionality.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
